src/objects/CPR__c.object
<CustomObject>
    <description>This is main home/Search page of the NQT application</description>
    <fields>
        <fullName>Account_Manager_Test__c</fullName>
        <label>Account Manager Test *</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Area1__c</fullName>
        <label>Area1</label>
        <picklist>
            <picklistValues>
                <fullName>[ALL]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nationwide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North East</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <description>r</description>
        <formula>IF(  ISPICKVAL(NQT_Project_Status__c , &apos;Quote Generation&apos;) ,  NQT_Account_Manager__r.FirstName &amp;&quot; &quot;&amp;  NQT_Account_Manager__r.LastName  ,&apos; &apos;)
+

IF(  ISPICKVAL(NQT_Project_Status__c , &apos;Quote Submitted&apos; ) &amp;&amp; ISPICKVAL(  NQT_Deliverable_Status__c , &apos;PO Received&apos;),  NQT_Account_Manager__r.FirstName &amp;&quot; &quot;&amp;  NQT_Account_Manager__r.LastName &amp;&quot;,&quot;&amp; NQT_Program_Manager__r.FirstName &amp;&quot; &quot;&amp;  NQT_Program_Manager__r.LastName  ,&apos; &apos;)
+

IF(  ISPICKVAL(NQT_Project_Status__c , &apos;Quote Submitted&apos; ) &amp;&amp; ISPICKVAL(  NQT_Deliverable_Status__c , &apos;Waiting For PO&apos;),   &apos;Bus Ops&apos;  ,&apos; &apos;)

+
IF (  ISPICKVAL(NQT_Project_Status__c , &apos;Request In-Review&apos;) &amp;&amp; ISPICKVAL( NQT_Deliverable_Status__c , &apos;In Review&apos;),    IF( FE_Review_Completed__c =TRUE, &apos; &apos;,NQT_FE__r.FirstName &amp;&quot; &quot;&amp;  NQT_FE__r.LastName  &amp;if(isblank( NQT_FE__c ),&apos;&apos;,&apos;,&apos;))  &amp;  IF( SE_Review_Completed__c =TRUE, &apos; &apos;, NQT_SE__r.FirstName &amp;&quot; &quot;&amp; NQT_SE__r.LastName &amp;if(isblank( NQT_SE__c ),&apos;&apos;,&apos;,&apos;)) &amp;  IF( SE_MSC_Review_Completed__c =TRUE, &apos; &apos;, NQT_SE_MSC__r.FirstName &amp;&quot; &quot;&amp;    NQT_SE_MSC__r.LastName)  , &apos; &apos;)
+

IF(  ISPICKVAL(NQT_Project_Status__c , &apos;Request Submitted&apos; ) ,  NQT_Account_Manager__r.FirstName &amp;&quot; &quot;&amp;  NQT_Account_Manager__r.LastName &amp;&quot;,&quot;&amp;  NQT_Program_Manager__r.FirstName &amp;&quot; &quot;&amp;  NQT_Program_Manager__r.LastName ,&apos; &apos;)
+
IF (  ISPICKVAL(NQT_Project_Status__c , &apos;Engineering Assigned&apos;),   IF(  NQT_FE_Deliverables_submit__c  =TRUE, &apos; &apos;, NQT_FE__r.FirstName &amp;&quot; &quot;&amp;  NQT_FE__r.LastName  &amp;if(isblank( NQT_FE__c ),&apos;&apos;,&apos;,&apos;))   &amp;  IF(  NQT_SE_Deliverables_Submitted__c =TRUE, &apos; &apos;, NQT_SE__r.FirstName &amp;&quot; &quot;&amp; NQT_SE__r.LastName &amp;if(isblank( NQT_SE__c ),&apos;&apos;,&apos;,&apos;)) &amp;   IF(  NQT_SE_MSC_Deliverables_Submitted__c =TRUE , &apos; &apos;, NQT_SE_MSC__r.FirstName &amp;&quot; &quot;&amp;    NQT_SE_MSC__r.LastName &amp;if(isblank(   NQT_SE_MSC__c  ),&apos;&apos;,&apos;&apos;)) , &apos; &apos;)

+

IF ( ISPICKVAL(NQT_Project_Status__c , &apos;Request In-Review&apos;) &amp;&amp; ISPICKVAL(NQT_Deliverable_Status__c  , &apos;Determine Deadline&apos;),   NQT_Account_Manager__r.FirstName &amp;&quot; &quot;&amp;  NQT_Account_Manager__r.LastName&amp;&quot;,&quot;&amp; NQT_Program_Manager__r.FirstName &amp;&quot; &quot;&amp;  NQT_Program_Manager__r.LastName ,&apos; &apos;)</formula>
        <inlineHelpText>r</inlineHelpText>
        <label>Assigned To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusOps_Cycle_Time__c</fullName>
        <label>BusOps Cycle Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BusOps_Submitted_Date__c</fullName>
        <label>BusOps Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Business_Operation__c</fullName>
        <label>Business Operation</label>
        <picklist>
            <controllingField>NQT_Area__c</controllingField>
            <picklistValues>
                <fullName>Jolen Godlewski</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debbie Kelly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patti Eshleman</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CPR_Close_Date__c</fullName>
        <label>CPR Close Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Comment_cancel__c</fullName>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Hold_Note__c</fullName>
        <defaultValue>&apos;Two fields below can be used to put the project on Customer Hold&apos;</defaultValue>
        <label>Note:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Hold__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to put CPR on Customer Hold</description>
        <inlineHelpText>Select this to put the CPR on Customer Hold</inlineHelpText>
        <label>Customer Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Requested_Cycle_Time__c</fullName>
        <label>Customer Requested Cycle Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deliverable_Status_Backup__c</fullName>
        <label>Deliverable Status Backup</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_PO_Date__c</fullName>
        <label>Document PO Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Document_PO__c</fullName>
        <label>Document PO</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Quote_Date__c</fullName>
        <label>Document Quote Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Document_Quote__c</fullName>
        <label>Document Quote</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engineering_Assigned_Date__c</fullName>
        <label>Engineering Assigned Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FE_Assigned_Date__c</fullName>
        <label>FE Assigned Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FE_Cycle_Time__c</fullName>
        <label>FE Cycle Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FE_Review_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FE Review Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FE_Submitted_Date__c</fullName>
        <label>FE Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_Id__c</fullName>
        <externalId>true</externalId>
        <label>Legacy ID (Savvion)</label>
        <length>150</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Market1__c</fullName>
        <label>Market1</label>
        <picklist>
            <controllingField>Area1__c</controllingField>
            <picklistValues>
                <fullName>[ALL]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evansville</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>St. Clairesville</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toledo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Youngstown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peoria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Bend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater Nebraska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Omaha</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Springfield</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minneapolis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MR/SMPP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PoC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MMSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMX Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alltel Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harrisburg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pittston</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lynchburg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Norfolk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Richmond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charlotte</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Augusta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charlotte-A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Columbia-A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Savannah</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Raleigh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fayetteville</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Met_Customer_Expectation__c</fullName>
        <label>Met Customer Expectation</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NQT_Account_Manager_Backup__c</fullName>
        <label>Account Manager Backup</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NQT_Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Please select Account Manager</inlineHelpText>
        <label>Account Manager*</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>NQT</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>Account</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>Manager</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>CPRs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NQT_Account_manager_Picklist__c</fullName>
        <inlineHelpText>Please select Account Manager</inlineHelpText>
        <label>Account Manager *</label>
        <picklist>
            <picklistValues>
                <fullName>Jeff Preussner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dean Ottati</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chad Schmelzer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gregor Gadbaw</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test NQT User AM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NQT_Agree_with_Customer_Requested_Quote__c</fullName>
        <label>Agree with Customer Requested Quote Date</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NQT_Area__c</fullName>
        <description>These are the Area  where Verizon provide its services</description>
        <inlineHelpText>Please select Area</inlineHelpText>
        <label>Area *</label>
        <picklist>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nationwide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North East</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NQT_Business_Operations__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Operations</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CPRs6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NQT_CPR_Lock__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag for locking CPR</description>
        <label>CPR Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NQT_CPR_Name__c</fullName>
        <inlineHelpText>Please enter CPR Name</inlineHelpText>
        <label>CPR Name *</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NQT_CPR_Review_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag</description>
        <label>CPR Review Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NQT_CPR_Start_Date__c</fullName>
        <description>This date represents the Customer Requested Quote Date.</description>
        <inlineHelpText>Please select CPR Start Date</inlineHelpText>
        <label>CPR Start Date *</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NQT_Cable_Type_and_Length_in_Meter_s__c</fullName>
        <inlineHelpText>Please give the Cable Type and Length(in Meter&apos;s) Details</inlineHelpText>
        <label>Cable Type and Length(in Meter&apos;s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NQT_Cabling_Location__c</fullName>
        <inlineHelpText>please select value from picklist</inlineHelpText>
        <label>Cabling Location</label>
        <picklist>
            <controllingField>NQT_Is_NSN_Required_to_Provide_cablling__c</controllingField>
            <picklistValues>
                <fullName>Computer floor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overhead Rack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NQT_Class_Access_After__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Class Access After</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NQT_Class_Access_Before__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Class Access Before</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NQT_Close_Project__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Close Project</description>
        <inlineHelpText>Close Project</inlineHelpText>
        <label>Close Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NQT_Customer_Contact_Phone__c</fullName>
        <inlineHelpText>Please enter Customer Contact Phone (e.g. 8479999999)</inlineHelpText>
        <label>Customer Contact Phone # *</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>NQT_Customer_Email_Address__c</fullName>
        <description>Email Address</description>
        <inlineHelpText>Please enter Customer Email Address</inlineHelpText>
        <label>Customer Email Address *</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>NQT_Customer_Requested_Ship_Date__c</fullName>
        <inlineHelpText>Please selcet Customer Requested Ship Date</inlineHelpText>
        <label>Customer Requested Ship Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NQT_Customer__c</fullName>
        <description>Picklist for selecting customer</description>
        <inlineHelpText>Please select Customer name</inlineHelpText>
        <label>Customer</label>
        <picklist>
            <picklistValues>
                <fullName>VERIZON</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NQT_Customer_contact_Name__c</fullName>
        <inlineHelpText>Please enter Customer Contact Name</inlineHelpText>
        <label>Customer Contact Name *</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NQT_Database_Work_Description__c</fullName>
        <inlineHelpText>Give the detail of Database Work Description</inlineHelpText>
        <label>Database Work Description:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NQT_Database_Work_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please select if Database Work is Needed</inlineHelpText>
        <label>Database Work Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NQT_Deliverable_Status__c</fullName>
        <label>Deliverable Status</label>
        <picklist>
            <picklistValues>
                <fullName>Assign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Determine Deadline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering Deliverable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Deliverable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting For PO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PO Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quote Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NQT_Equipment__c</fullName>
        <label>Equipment ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NQT_FE_Assigned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FE Assigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NQT_FE_Backup__c</fullName>
        <label>FE Backup</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NQT_FE_Deadline__c</fullName>
        <label>FE Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NQT_FE_Deliverables_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FE Deliverables Completed Flag</description>
        <inlineHelpText>FE Deliverables Completed Flag</inlineHelpText>
        <label>FE Deliverables Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NQT_FE_Deliverables_submit__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please select if submitted all required Deliverables</inlineHelpText>
        <label>FE Deliverables Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NQT_FE_Review_Comments__c</fullName>
        <label>FE Review Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NQT_FE_Review__c</fullName>
        <label>FE Review</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NQT_FE_Rework_Backup__c</fullName>
        <defaultValue>NULL</defaultValue>
        <label>FE Rework Backup</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NQT_FE_Services__c</fullName>
        <label>FE Services ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NQT_FE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Please select FE</inlineHelpText>
        <label>FE</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR (2 AND 3 AND 4)</booleanFilter>
            <filterItems>
                <field>User.FE__c</field>
                <operation>equals</operation>
                <value>TRUE</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>NQT</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>Field</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>Engineer</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>CPRs4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NQT_FE_agree_to_the_completeness_of_CPR__c</fullName>
        <inlineHelpText>Please select if you agree to the completeness of CPR</inlineHelpText>
        <label>I agree to the completeness of CPR FE</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NQT_Field_Engineering__c</fullName>
        <description>Please select if rework is required</description>
        <inlineHelpText>Please select if rework is required</inlineHelpText>
        <label>Field Engineering</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NQT_Has_the_CPR_been_Reviewed__c</fullName>
        <label>Has the CPR been Reviewed?</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NQT_I_Agree__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>I have attached the required document(s) for project deliverable and submitted Quote to the Customer.</inlineHelpText>
        <label>I Agree</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NQT_If_Other_MTSO__c</fullName>
        <inlineHelpText>Enter a value if &apos;Other&apos; is selected in MTSO.</inlineHelpText>
        <label>If Other</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NQT_If_Other_Product__c</fullName>
        <description>If &apos;Other&apos; is selected in Product</description>
        <inlineHelpText>Please enter value if &apos;Other&apos; is selected in Product</inlineHelpText>
        <label>If Other</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NQT_Installation_and_Additional_Details__c</fullName>
        <description>Installation and Additional Details</description>
        <inlineHelpText>Please provide 
Installation and Additional Details</inlineHelpText>
        <label>Installation and Additional Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NQT_Is_NSN_Required_to_Provide_cablling__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please select if NSN Required to Provide cablling</inlineHelpText>
        <label>Is NSN Required to Provide cablling ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NQT_Is_the_CPR_Complete_and_Accurate__c</fullName>
        <label>Is the CPR Complete and Accurate?</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NQT_MTSO__c</fullName>
        <inlineHelpText>Please select  MTSO</inlineHelpText>
        <label>MTSO *</label>
        <picklist>
            <controllingField>NQT_Market__c</controllingField>
            <picklistValues>
                <fullName>Eugene</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rocklin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stockton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aurora1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aurora2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Westminster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tucson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phoenix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>El Paso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albuquerque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bloomington</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Golden Valley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minnehaha</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peoria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Bend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evansville</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater Nebraska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Omaha</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Springfield</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>St. Clairesville</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toledo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Youngstown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Raleigh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charlotte</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charleston</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greensboro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greenville</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>NQT_MTX_Ericsson__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select &apos;MTX-Ericsson&apos; for CPR&apos;s containing Ericsson Content.</inlineHelpText>
        <label>MTX Ericsson</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>